--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,8 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "deployUrl": "https://seokju-na.github.io/angular-cdk-examples/"
                     },
                     "configurations": {
                         "production": {
