--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
                             "src/styles.scss"
                         ],
                         "scripts": [],
-                        "deployUrl": "https://seokju-na.github.io/angular-cdk-examples/"
+                        "deployUrl": "https://seokju-na.github.io/angular-cdk-examples/",
+                        "baseHref": "angular-cdk-examples/"
                     },
                     "configurations": {
                         "production": {
