프로덕션 환경에서만 DeployUrl과 BaseHref가 변경되도록 수정

--- a/angular.json
+++ b/angular.json
@@ -48,9 +48,7 @@
                         "styles": [
                             "src/styles.scss"
                         ],
-                        "scripts": [],
-                        "deployUrl": "https://seokju-na.github.io/angular-cdk-examples/",
-                        "baseHref": "/angular-cdk-examples/"
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -68,7 +66,9 @@
                             "aot": true,
                             "extractLicenses": true,
                             "vendorChunk": false,
-                            "buildOptimizer": true
+                            "buildOptimizer": true,
+                            "deployUrl": "https://seokju-na.github.io/angular-cdk-examples/",
+                            "baseHref": "/angular-cdk-examples/"
                         }
                     }
                 },
